--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@headlessui/react": "^1.7.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-rnd": "^10.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
