--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
     "next": "^14.2.3",
     "octokit": "^3.2.0",
     "react": "^18.2.0",
